added register page + password forgot

--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -51,6 +51,10 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="logo"><img src="../assets/images/logo.jpg" alt="Fingertise"></a>
+                <select class="form-control dash-select">
+                    <option>Advertiser</option>
+                    <option>Developer</option>
+                </select>
             </div>
             <!-- /.navbar-header -->
 
@@ -129,7 +133,7 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="#"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
+                              <a href="helpdesk.html"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
                           </li>
                           <li>
                               <a href="#"><i class="fa fa-wechat fa-fw"></i> Live Support</a>
@@ -314,16 +318,16 @@
    </footer>
 
     <!-- jQuery -->
-   <script src="js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
-   <!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-   <!-- Metis Menu Plugin JavaScript -->
-   <script src="js/plugins/metisMenu/metisMenu.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="js/plugins/metisMenu/metisMenu.js"></script>
 
-   <!-- Custom Theme JavaScript -->
-   <script src="js/sb-admin-2.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="js/sb-admin-2.js"></script>
 
 </body>
 
