--- a/prototype/reports-charts.html
+++ b/prototype/reports-charts.html
@@ -51,6 +51,10 @@
 						  <span class="icon-bar"></span>
 					 </button>
 					 <a href="#" class="logo"><img src="../assets/images/logo.jpg" alt="Fingertise"></a>
+                <select class="form-control dash-select">
+                    <option>Advertiser</option>
+                    <option>Developer</option>
+                </select>
 				</div>
 				<!-- /.navbar-header -->
 
@@ -129,7 +133,7 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="#"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
+                              <a href="helpdesk.html"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
                           </li>
                           <li>
                               <a href="#"><i class="fa fa-wechat fa-fw"></i> Live Support</a>
