--- a/prototype/forgot-password.html
+++ b/prototype/forgot-password.html
@@ -8,11 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-<<<<<<< HEAD
     <title>Fingertise - Advertiser Register</title>
-=======
-    <title>Fingertise - Forgot Password</title>
->>>>>>> FETCH_HEAD
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +20,6 @@
     <link href="css/plugins/timeline.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-<<<<<<< HEAD
-=======
-    <link rel="stylesheet" type="text/css" href="../../assets/css/dashstyle.css" />
->>>>>>> FETCH_HEAD
     <link href="css/sb-admin-2.css" rel="stylesheet">
     <link href="css/ft-styles.css" rel="stylesheet">
 
@@ -48,15 +40,9 @@
 
 <body>
     <div id="wrapper">
-<<<<<<< HEAD
 
         <!-- Navigation -->
         <nav class="header navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-=======
-        <!-- Navigation -->
-        <nav class="header navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            
->>>>>>> FETCH_HEAD
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -65,7 +51,6 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="logo"><img src="../assets/images/logo.jpg" alt="Fingertise"></a>
-<<<<<<< HEAD
                 <select class="form-control dash-select">
                     <option>Advertiser</option>
                     <option>Developer</option>
@@ -97,7 +82,7 @@
         <div id="page-wrapper" class="no-side">
             <div class="row blue-box border-box">
                 <div class="col-lg-12">
-                    <h1 class="dash-title">Signup as an Advertiser</h1>
+                    <h1 class="dash-title">Forgot Password</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -195,59 +180,6 @@
         <!-- /#page-wrapper -->
     </div>
     <!-- /#wrapper -->
-=======
-            </div>
-            
-            <!-- /.navbar-header -->
-    <div class="signup-link">
-        <ul>
-            <li><a href="#">Signup</a></li>
-            <li>|</li>
-            <li><a href="#">Login</a></li>
-        </ul>
-            </div>
-            <!-- navigation -->
-          <nav>
-            <div class="naviagtion">
-              <ul>
-                <li class="col-lg-2 col-md-2 col-sm-2"><a href="#"><span class="nav-menu-item-a">Dashboard</span></a></li>
-                <li class="col-lg-2 col-md-2 col-sm-2"><a href="#"><span class="nav-menu-item-a">Payments</span></a></li>
-                <li class="col-lg-2 col-md-2 col-sm-2"><a href="#" ><span class="nav-menu-item-a">Reports</span></a></li>
-                <li class="col-lg-2 col-md-2 col-sm-2"><a href="#"><span class="nav-menu-item-a">Helpdesk</span></a></li>
-              </ul>
-            </div>
-          </nav>
-          <!-- navigation --> 
-            <!-- /.navbar-static-side -->
-        </nav>
-
-       <div id="page-wrapper">
-                <div class="login-panel col-lg-8 col-md-8 gray-box border-box panel">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Forgot Password</h3>
-                    </div>
-                    <div class="panel-body">
-                        <form role="form">
-                            <fieldset>
-                                <div class="panel-body">
-                                    <div class="col-lg-3 col-md-4 col-xs-4">
-                                        <label>Email<span class="text-danger">*</span></label>
-                                </div>
-                                    <div class="col-lg-3 col-md-4 col-xs-4">
-                                    <input class="form-control" name="email" type="email" autofocus>
-                                </div>
-                            </div>
-                               <div class="panel-body">
-                                   <label>Fingertise will send password reset instructions to the email address associated with your account.</label>
-                                    </div>
-                               <button type="button" class="btn btn-primary">Send</button>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-        </div>
-   
->>>>>>> FETCH_HEAD
 
    <footer>
      <div id="footer">
@@ -264,16 +196,9 @@
              <li><a href="#">Blog</a></li>
              <li><a href="#">Support</a></li>
            </ul>
-<<<<<<< HEAD
                  </div>
        </div>
              </div>
-=======
-             </div>
-            </div>
-        </div>
-     </div>
->>>>>>> FETCH_HEAD
    </footer>
 
     <!-- jQuery -->
@@ -283,7 +208,6 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-<<<<<<< HEAD
     <script src="js/plugins/metisMenu/metisMenu.js"></script>
 
     <!-- Custom Theme JavaScript -->
@@ -291,17 +215,4 @@
 
 </body>
 
-=======
-    <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
-   
-    </body>
->>>>>>> FETCH_HEAD
 </html>
