--- a/prototype/dev-register.html
+++ b/prototype/dev-register.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fingertise - Advertiser Register</title>
+    <title>Fingertise - Developer Register</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +76,7 @@
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
-                <div class="container-responsive">
+                <div class="container">
 				<div class="col-lg-12 col-md-12 gray-box border-box panel panel-default">
                <!-- row -->
                <div class="panel-body">
@@ -178,7 +178,7 @@
 
    <footer>
      <div id="footer">
-               <div class="container-responsive">
+               <div class="container">
          <div class="foot_link">
                    <ul>
              <li><a href="#">Home</a></li>
