--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -227,6 +227,172 @@
                               <td>$0.00</td>
                               <td>$0.00</td>
                           </tr>
+
+<tr style="background: none;" class="hide">
+<td colspan="14" style="padding: 0">
+    <form action="#">
+        <div class="editForm">
+            <table width="100%">
+                <tr>
+                    <td class="blue-box border-box summeryTdBox">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <i class="fa fa-list-alt"></i> <strong>SUMMARY</strong>
+                            </div>
+                            <div class="panel-body">
+                                <ul>
+                                    <li style="" id="libanner360_smmary">
+                                        <label>360 banner Ads:</label>
+                                        <span id="smmary_360b">
+                                            Abstract Banners - Large&nbsp;:&nbsp;<span id="dispabl">Enabled</span><span id="dispablads"></span><br>
+                                            Abstract Banners - Small&nbsp;:&nbsp;<span id="dispabs">Enabled</span><br>
+                                            Abstract Banners - Video&nbsp;:&nbsp;<span id="dispvb">Enabled</span><br>
+                                            Banner Ads - Traditional&nbsp;:&nbsp;<span id="dispsb">Enabled</span><br>
+                                        </span>
+                                    </li>
+
+                                    <li id="lipush_smmary">
+                                        <label>Push Notification Ads:</label>
+                                        <span id="push_summary">
+                                            Users&nbsp;:&nbsp;<span id="dispwhowillget">All Users</span><br>
+                                            Frequency&nbsp;:&nbsp;<span id="dispadsoften">3 Ads/Day</span><br>
+                                            Delay&nbsp;:&nbsp;<span id="dispfirstaddelay">0 day(s)</span><br>
+                                        </span>
+                                        <span id="disable_push_summary" style="display: none;">Status&nbsp;:&nbsp;<span id="push_status">Disabled</span></span>
+                                    </li>
+                                    <li id="liicon_smmary">
+                                        <label>Icon Ads:</label>
+                                        <span id="icon_summary">Ads per user per month&nbsp;:&nbsp;<span id="dispiconspermonth">5</span></span>
+                                        <span id="disable_icon_summary" style="display: none;">Status&nbsp;:&nbsp;<span id="icon_status">Disabled</span></span>
+                                    </li>
+                                    <li id="lismart_smmary">
+                                        <label>Smartwall Ads:</label>
+                                        <span id="smart_smmary">
+                                            Appwall Ads&nbsp;:&nbsp;<span id="dispappwall">Enabled</span><br>
+                                            Dialog Ads&nbsp;:&nbsp;<span id="dispdialog">Enabled</span><br>
+                                            Landing page Ads&nbsp;:&nbsp;<span id="displanding">Enabled</span><br>
+                                            Rich Media Full Page Ads&nbsp;:&nbsp;<span id="disprmfp">Enabled</span><br>
+                                            Overlay Ads&nbsp;:&nbsp;<span id="dispoverlay">Enabled</span><br>
+                                            Video Ads&nbsp;:&nbsp;<span id="dispvideo">Enabled</span><br>
+                                        </span>
+                                        <!-- <span id="disable_smart_smmary">Status&nbsp;:&nbsp;<span id="smart_status">Disabled</span></span> -->
+                                    </li>
+                                    <li id="libanner_smmary">
+                                        <label>Banner Ads:</label>
+                                        <span id="inapp_smmary">
+                                            <!-- Image Banner Ads&nbsp;:&nbsp;<span id="dispinappimgban">5</span><br/>
+                                            Rich Media Banner Ads&nbsp;:&nbsp;<span id="dispinapprchban"></span><br/> -->
+                                            Status&nbsp;:&nbsp;<span id="dispinappimgban">Enabled</span><br>
+                                        </span>
+                                        <span id="refresh_interval_summary">Refresh Ads&nbsp;:&nbsp;<span id="dispRefreshInterval">5</span></span>
+                                        <!-- <span id="disable_smart_smmary">Status&nbsp;:&nbsp;<span id="smart_status">Disabled</span></span> -->
+                                    </li>
+                                    <li id="limisc_smmary">
+                                        <label>Misc. Settings:</label>
+                                        <span id="miscset_summary">Exclude Dating Campaigns&nbsp;:&nbsp;<span id="dispdating">No</span></span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="efCont">
+                    <div class="container-fluid">
+                        <div class="form-horizontal efcform-horizon">
+                            <div class="form-group">
+                                <label for="input1" class="col-sm-2 control-label">
+                                    App Name : <span class="req">*</span>
+                                </label>
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control" id="input1" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">
+                                    App Type :
+                                    <span class="req">*</span>
+                                </label>
+                                <div class="col-sm-6">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Android Market URL
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" checked> Off-Market URL
+                                    </label>
+                                    <label class="radio-inline"><a title="" data-placement="right" data-toggle="tooltip"
+                                                                      data-original-title="For google android market, Use the following URL to directly link your app to the Android Market using following format ( http://play.google.com/store/apps/details?id=package-name) and for other app market URL provide direct link to your app.">
+                                        <i class="fa  fa-info-circle"></i>
+                                    </a></label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="input3" class="col-sm-2 control-label">
+                                    App URL :
+                                    <span class="req">*</span>
+                                </label>
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control" id="input3" placeholder="Enter your APK url here">
+                                    <p class="help-block">Please enter the Android Market URL or Off-Market URL</p>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">
+                                    Category :
+                                    <span class="req">*</span>
+                                </label>
+                                <div class="col-sm-6">
+                                    <select class="form-control"><option value="" selected="selected">Select Category</option>
+                                        <option value="1">Arts and Entertainment</option>
+                                        <option value="2">Automotive</option>
+                                        <option value="3">Business</option>
+                                        <option value="4">Careers</option>
+                                        <option value="227">Dating</option>
+                                        <option value="5">Education</option>
+                                        <option value="6">Family and Parenting</option>
+                                        <option value="13">Finance Personal</option>
+                                        <option value="8">Food and Drink</option>
+                                        <option value="393">Games</option>
+                                        <option value="7">Health and Fitness</option>
+                                        <option value="9">Hobbies and Interests</option>
+                                        <option value="10">Home and Garden</option>
+                                        <option value="26">Illegal Content</option>
+                                        <option value="11">Law, Gov't and Politics</option>
+                                        <option value="12">News</option>
+                                        <option value="25">Non-Standard Content</option>
+                                        <option value="16">Pets</option>
+                                        <option value="21">Real Estate</option>
+                                        <option value="23">Religion and Spirituality</option>
+                                        <option value="15">Science</option>
+                                        <option value="22">Shopping</option>
+                                        <option value="14">Society</option>
+                                        <option value="17">Sports</option>
+                                        <option value="18">Style and Fashion</option>
+                                        <option value="19">Technology and Computing</option>
+                                        <option value="20">Travel</option>
+                                        <option value="24">Uncategorized</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">
+                                    Sub Category :
+                                    <span class="req">*</span>
+                                </label>
+                                <div class="col-sm-6">
+                                    <select class="form-control" id="subselCategoryEdit1" name="subselCategoryEdit1">
+                                        <option value="">Please Select Category</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </form>
+</td>
+</tr>
+
                           <tr>
                               <td><input type="checkbox" value=""></td>
                               <td>#</td>
@@ -267,7 +433,6 @@
                      </table>
 
                      <table class="totals">
-                        <tbody>
                           <tr>
                               <td>Account Total and Averages</td>
                               <td>Total Daily Budgets: 0</td>
@@ -275,7 +440,6 @@
                               <td>Total CPM: $0.00</td>
                               <td>Total Spent: $0.00</td>
                           </tr>
-                       </tobdy>
                     </table>
                             
                 </div>
@@ -319,6 +483,12 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/sb-admin-2.js"></script>
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 
 </body>
 
