--- a/prototype/helpdesk.html
+++ b/prototype/helpdesk.html
@@ -280,7 +280,7 @@
                          <!-- row -->
                          <div class="panel-body">
                         <p class="col-lg-12 text-center">
-                  <button type="button" class="btn btn-primary">submit </button>
+                  <button type="button" class="btn btn-primary">Submit </button>
                            
                
                         <button type="button" class="btn btn-primary">Cancel</button>     
