--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -685,6 +685,18 @@
                             Note: For technical and performance reasons, the maximum ad delay setting is now 1 day.
                         </div>
                     </div><!--End form row-->
+                    <div class="formRow noBorderB">
+                        <div role="form" class="form-inline">
+                            <div class="form-group">
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" value=""> &nbsp; <strong>Activate Push Notification Ads for all Apps</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="alert alert-warning">
+                            Note: This will apply targeting changes to ALL push ads subscribed in your account.
+                        </div>
+                    </div><!--End form row-->
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -695,7 +707,43 @@
                 </div>
                 <div class="panel-collapse collapse" id="collapseThree" aria-expanded="false">
                     <div class="panel-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Lorem.
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a href="#collapseThree" data-parent="#accordion" data-toggle="collapse" class="collapsed" aria-expanded="false">Collapsible Group Item #3</a>
+                    </h4>
+                </div>
+                <div class="panel-collapse collapse" id="collapseThree" aria-expanded="false">
+                    <div class="panel-body">
+                        Lorem.
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a href="#collapseThree" data-parent="#accordion" data-toggle="collapse" class="collapsed" aria-expanded="false">Collapsible Group Item #3</a>
+                    </h4>
+                </div>
+                <div class="panel-collapse collapse" id="collapseThree" aria-expanded="false">
+                    <div class="panel-body">
+                        Lorem.
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a href="#collapseThree" data-parent="#accordion" data-toggle="collapse" class="collapsed" aria-expanded="false">Collapsible Group Item #3</a>
+                    </h4>
+                </div>
+                <div class="panel-collapse collapse" id="collapseThree" aria-expanded="false">
+                    <div class="panel-body">
+                        Lorem.
                     </div>
                 </div>
             </div>
