--- a/prototype/reports-custom.html
+++ b/prototype/reports-custom.html
@@ -167,13 +167,13 @@
             <div class="col-lg-12 col-md-12 border-box panel panel-default">
                 <div class="panel panel-default" id="custom_report">
                     <div class="panel-heading">
-                        <div role="form" class="form-inline">
+                        <div role="form" class="form-inline clearfix">
                             <div class="form-group">
                                 <div aria-label="csReport Form" role="group" class="btn-group">
                                     <button class="btn btn-sm btn-primary" type="button" data-target="#myModal" data-toggle="modal"><i class="fa fa-gear"></i></button>
                                     <button class="btn btn-sm btn-primary" type="button" data-target="#myModal" data-toggle="modal">Create NEW / Customize Reports</button>
                                 </div>
-                            </div> &nbsp;<!--end form group-->
+                            </div><!--end form group-->
                             <div class="form-group">
                                 <label>Ad Type</label> &nbsp;
                                 <select class="form-control input-sm" style="width: 165px">
@@ -184,7 +184,7 @@
                                     <option value="10">360 Banner Ads</option>
                                     <option value="8">Add-on 1</option>
                                 </select>
-                            </div> &nbsp;<!--end form group-->
+                            </div><!--end form group-->
                             <div class="form-group">
                                 <label>Date Range</label> &nbsp;
                                 <input type="text" value="May 24, 2013 - November 29, 2014" class="form-control input-sm" style="width: 200px"/>
