--- a/prototype/helpdesk.html
+++ b/prototype/helpdesk.html
@@ -104,7 +104,7 @@
                               <a href="payment-info.html"><i class="fa fa-credit-card fa-fw"></i> Payment Info</a>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-money fa-fw"></i> Payment History</a>
+                              <a href="payment-history.html"><i class="fa fa-money fa-fw"></i> Payment History</a>
                           </li>
                         </ul>
                         <!-- nav-second-lvl -->
