--- a/prototype/dev-register.html
+++ b/prototype/dev-register.html
@@ -71,12 +71,12 @@
         <div id="page-wrapper" class="no-side">
             <div class="row blue-box border-box">
                 <div class="col-lg-12">
-                    <h1 class="dash-title">Signup as an Advertiser</h1>
+                    <h1 class="dash-title">Signup as an Developer</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
-                <div class="container">
+                <div class="container-responsive">
 				<div class="col-lg-12 col-md-12 gray-box border-box panel panel-default">
                <!-- row -->
                <div class="panel-body">
