--- a/prototype/payment-history.html
+++ b/prototype/payment-history.html
@@ -192,8 +192,8 @@
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="home">
                     <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <div class="table-responsiv">
+                                <table class="table table-striped table-bordered table-hover" id="phTbl1">
                                     <thead>
                                         <tr>
                                             <th>Payment ID</th>
@@ -309,8 +309,8 @@
                                 </div>
                                 <div class="tab-pane fade" id="daily">
                                     <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <div class="table-responsiv">
+                                <table class="table table-striped table-bordered table-hover" id="phTbl2">
                                     <thead>
                                         <tr>
                                             <th>Payment ID</th>
@@ -416,7 +416,7 @@
                                             <td>Payment</td>
                                             <td>$7.15</td>
                                         </tr>
-                                        
+
                                     </tbody>
                                 </table>
                             </div>
@@ -426,8 +426,8 @@
                                 </div>
                         <div class="tab-pane fade" id="monthly">
                             <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <div class="table-responsiv">
+                                <table class="table table-striped table-bordered table-hover" id="phTbl3">
                                     <thead>
                                         <tr>
                                             <th>Date</th>
@@ -560,7 +560,7 @@
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
     $(document).ready(function() {
-        $('#dataTables-example').dataTable();
+        $('#phTbl1, #phTbl2, #phTbl3').dataTable();
     });
     </script>
 
