--- a/prototype/ad-register.html
+++ b/prototype/ad-register.html
@@ -21,6 +21,8 @@
 
     <!-- Custom CSS -->
      <link rel="stylesheet" type="text/css" href="../../assets/css/dashstyle.css" />
+    <link rel="stylesheet" type="text/css" href="../../assets/css/mnav.css" />
+    <link rel="stylesheet" type="text/css" href="../../assets/css/menu.css" />
     <link href="css/sb-admin-2.css" rel="stylesheet">
     <link href="css/ft-styles.css" rel="stylesheet">
 
